# Rusty

./: Cargo.toml  readme.md  rusty
src/: ai_chat.rs  main.rs
