[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
whoami = "1.4.1"
